src/evaluator/if_statement/snapshots/rust_monkey_interpreter__evaluator__if_statement__tests__test_evaluator_if_nodes_case4.snap
---
source: src/evaluator/if_statement/tests.rs
expression: "crate::evaluator::evaluate(crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
"NULL"
